<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AddMeetingActivity">


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatSpinner>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/subject"
        app:layout_constraintStart_toStartOf="parent">

         <TextView
            android:id="@+id/time"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:hint="Horaire"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="200dp">

        </TextView>

        <Button
            android:id="@+id/button_TP"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:layout_below="@+id/time"
            android:layout_marginTop="0dp"
            android:text="Heure"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="240dp">

        </Button>

        <TextView
            android:id="@+id/date"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:hint="Date"
            android:textSize="30sp"
            android:layout_toRightOf="@+id/time"
            >

        </TextView>

        <Button
            android:id="@+id/button_DP"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:layout_below="@+id/date"
            android:layout_marginTop="0dp"
            android:text="Date"
            android:layout_toRightOf="@+id/button_TP">

        </Button>

    </RelativeLayout>

    <EditText
        android:id="@+id/subject"
        android:layout_width="350dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641">

    </EditText>

    <EditText
        android:id="@+id/participants"
        android:layout_width="350dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779">

    </EditText>

    <Button
        android:id="@+id/add_Meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="16dp"
        android:text="Ajouter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participants"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>