<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lamzone.mareu.controller.ListMeetingActivity">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_filter_hour"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/filter_date"
                android:title="Filtrer / Dates"
                app:showAsAction="never" />


            <item
                android:id="@+id/filter_meetingRoom"
                android:title="Filtrer / Lieux"
                app:showAsAction="never" />

            <item
                android:id="@+id/no_filter"
                android:title="Toutes les réunions"
                app:showAsAction="never" />
        </menu>


    </item>


</menu>
