<resources>
    <string name="app_name">Ma réu</string>
    <string name="action_filter_hour">/Heures</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
